# optimal_control

./: README.md  pyproject.toml
output/: summary.json  trajectory.csv
src/optimal_control_parking/: analytical.py  cli.py  models.py  numerical.py
